--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
               </div>
         </main>
     </div>
+    <script src="js/funciones.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
